# x86-power-control

./: .clang-tidy  .gitignore  CMakeLists.txt  MAINTAINERS  OWNERS  README.md  Testing.txt  groups  meson.build  meson.options  meson_options.txt  project.config
chassis-control/: CMakeLists.txt
chassis-control/inc/: chassis_control.hpp
chassis-control/src/: chassis_control.cpp  main.cpp
config/: power-config-acrp.json  power-config-host0.json
config/intel/: power-config-acrp.json  power-config-jcrp.json
gpio/: CMakeLists.txt
gpio/inc/: gpio.hpp
gpio/src/: gpio.cpp
i2c/: CMakeLists.txt
i2c/inc/: i2c.hpp
i2c/src/: i2c.cpp
power-control/: CMakeLists.txt
power-control-x86/: CMakeLists.txt
power-control-x86/config/: power-config-host0.json
power-control-x86/service_files/: chassis-system-reset.service  xyz.openbmc_project.Chassis.Control.Power.service  xyz.openbmc_project.Chassis.Control.Power@.service
power-control-x86/src/: .power_control.cpp.swp  power_control.cpp  sample-config.json
power-control/inc/: power_control.hpp  timer.hpp
power-control/inc/non-yocto/linux/: aspeed-lpc-sio.h
power-control/service-files/: intel-power-start@.service  intel-power-stop@.service  intel-power-warm-reset@.service  obmc-chassis-hard-poweroff@.target  obmc-chassis-poweroff@.target  obmc-chassis-poweron@.target  obmc-chassis-powerreset@.target  obmc-host-reboot@.target  obmc-host-soft-reboot@.target  obmc-host-start@.target  obmc-host-startmin@.target  obmc-host-stop@.target  obmc-host-warm-reset@.target  op-reset-chassis-running@.service  xyz.openbmc_project.Chassis.Control.Power@.service
power-control/src/: main.cpp  power_control.cpp  timer.cpp
service_files/: chassis-poweroff.target  chassis-poweron.target
src/: power_control.cpp  power_control.hpp
subprojects/: nlohmann_json.wrap
subprojects/packagefiles/boost/: meson.build
