option(
    'chassis-system-reset',
    type: 'feature',
    value: 'disabled',
    description: 'Enable chassis system power reset to allow removing power and restoring back',
)
option(
    'use-plt-rst',
    type: 'feature',
    value: 'disabled',
    description: 'Use the PLT_RST eSPI signal to detect warm reset instead of POST Complete',
)
option(
    'use-acboot',
    type: 'feature',
    value: 'disabled',
    description: 'Use hardware Reset Reason to control Power Restore. Note: this only works with Intel-BMC',
)
option(
    'ignore-soft-resets-during-post',
    type: 'feature',
    value: 'disabled',
    description: 'Ignore soft resets from host during POST',
)
option(
    'button-passthrough',
    type: 'feature',
    value: 'disabled',
    description: 'Directly couple through power and reset buttons',
)
